# semantic_car_mapping

./: .gitignore  README.md
data/: open-field-ikea_processed.txt  very-important-3-cuboids.json  very_important_cuboids.txt
data/cuboids/: falcon_pennovation_2022-09-08-08-16-19.json  falcon_pennovation_2022-09-08-08-16-19.txt  open-field-ikea_processed.json
data/outputs/with_aug_model_pred/: 245.pkl  246.pkl  247.pkl  249.pkl  72.pkl  73.pkl  76.pkl  82.pkl  84.pkl  86.pkl  87.pkl  88.pkl
data/outputs/without_aug_model_pred/: 243.pkl  245.pkl  71.pkl  72.pkl  74.pkl  76.pkl  78.pkl  82.pkl  85.pkl
data/pred/new_data/: 71.pkl  74.pkl  78.pkl  79.pkl  81.pkl
data/pred/old_data/: 71.pkl  72.pkl  74.pkl  76.pkl  77.pkl  78.pkl  80.pkl  82.pkl  83.pkl  84.pkl  88.pkl  89.pkl  91.pkl
data/pred_may2/with_aug_model_pred/: 240.pkl  241.pkl  242.pkl  243.pkl  244.pkl  248.pkl  70.pkl  75.pkl  77.pkl  80.pkl  83.pkl  85.pkl  89.pkl
data/pred_may2/without_aug_model_pred/: 240.pkl  241.pkl  242.pkl  244.pkl  246.pkl  247.pkl  248.pkl  249.pkl  70.pkl  73.pkl  75.pkl  77.pkl  79.pkl  80.pkl  81.pkl  83.pkl  84.pkl  86.pkl  87.pkl  88.pkl  89.pkl
data/pred_old_mode/: 73.pkl  75.pkl  79.pkl  81.pkl  85.pkl  86.pkl  87.pkl  90.pkl
planar_segmentation/: package.xml
pointrcnn/: README.md
pointrcnn/inference/: simple_inference.py  visualize_data.py
pointrcnn/lib/: config.py
pointrcnn/lib/datasets/: kitti_rcnn_dataset.py  perch_dataset.py
pointrcnn/tools/: eval_perch.py  eval_rcnn.py  train_perch.py  visualization.py
rviz/: vis_cuboids.rviz  vis_model.rviz
scripts/: evaluate_model.py  generate_data.py  ground_segmentation.py  interactive_boxes.py  pkl_scan_to_json.py  process_data.py  process_raw_cuboids_file.py  transform_ground_plane.py  utils.py  visualize_data.py  visualize_kitti.py  visualize_model.py
scripts/planar_segmentation/: CMakeLists.txt  planar_segmentation.cpp
(+10 files in other folders)
